--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,16 @@ footer {
     justify-content: flex-start;
     flex-wrap: wrap;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .square {
     border: 1px solid black;
     height: calc(100% / 10);
     width: calc(100% / 10);
+    cursor: pointer;
+}
+
+.clicked {
+    background-color: aquamarine;
 }
